custom vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "menus.h": "c",
-        "alunos.h": "c"
+        "alunos.h": "c",
+        "inscricoes.h": "c"
     },
     "cSpell.enableFiletypes": [
         "!c",
