added B, C, D reports files; restructure source;

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "files.associations": {
         "menus.h": "c",
         "alunos.h": "c",
-        "inscricoes.h": "c"
+        "inscricoes.h": "c",
+        "relatorio_a.h": "c",
+        "ucs.h": "c"
     },
     "cSpell.enableFiletypes": [
         "!c",
